improv: more common host eye spawning