@@ -158,7 +158,7 @@ public class SliderHostMimic extends PathfinderMob implements AetherBossMob<Slid
             if (!this.level().isClientSide() && source.getEntity() instanceof LivingEntity living) {
                 this.mostDamageTargetGoal.addAggro(living, amount); // AI goal for being hurt.
                 if (this.spawnEyeCooldown <= 0 && this.getEyeProjectiles().size() == 4) {
-                    this.getEyeProjectiles().remove(0).discard();
+                    this.getEyeProjectiles().removeFirst().discard();
                     this.spawnEyeCooldown = 200;
                 }
             }
@@ -170,7 +170,7 @@ public class SliderHostMimic extends PathfinderMob implements AetherBossMob<Slid
                 if (!this.level().isClientSide() && source.getEntity() instanceof LivingEntity living) {
                     this.mostDamageTargetGoal.addAggro(living, amount); // AI goal for being hurt.
                     if (this.spawnEyeCooldown <= 0 && this.getEyeProjectiles().size() == 4) {
-                        this.getEyeProjectiles().remove(0).discard();
+                        this.getEyeProjectiles().removeFirst().discard();
                         this.spawnEyeCooldown = 200;
                     }
                 }
@@ -271,6 +271,14 @@ public class SliderHostMimic extends PathfinderMob implements AetherBossMob<Slid
             double z = this.position().z() + (double) (this.getRandom().nextFloat() - this.getRandom().nextFloat()) * 1.5;
             this.level().addParticle(ParticleTypes.POOF, x, y, z, 0.0, 0.0, 0.0);
         }
+    }
+
+    private void spawnHostEye() {
+        HostEyeProjectile hostEyeProjectile = new HostEyeProjectile(this.level(), this, this.getDirection());
+        this.level().addFreshEntity(hostEyeProjectile);
+        this.playSound(this.getShootSound(), 1.0F, 1.0F / (this.getRandom().nextFloat() * 0.2F + 0.9F));
+        hostEyeProjectile.setPos(this.position().add(0.0F, (this.getBbHeight() / 2.0F) + 0.2F, 0.0F));
+        this.eyeProjectiles.add(hostEyeProjectile);
     }
 
     @Override
@@ -620,6 +628,10 @@ public class SliderHostMimic extends PathfinderMob implements AetherBossMob<Slid
         @Override
         public void stop() {
             this.sliderHostMimic.getNavigation().stop();
+            if (this.sliderHostMimic.getEyeProjectiles().size() >= 4) {
+                this.sliderHostMimic.getEyeProjectiles().removeFirst().discard();
+            }
+            this.sliderHostMimic.spawnHostEye();
         }
 
         @Override
@@ -749,16 +761,17 @@ public class SliderHostMimic extends PathfinderMob implements AetherBossMob<Slid
             if (livingentity != null) {
                 if (this.sliderHostMimic.eyeProjectiles.size() < 4) {
                     if (this.attackTime <= 0) {
-                        HostEyeProjectile hostEyeProjectile = new HostEyeProjectile(this.sliderHostMimic.level(), this.sliderHostMimic, this.sliderHostMimic.getDirection());
-                        this.sliderHostMimic.level().addFreshEntity(hostEyeProjectile);
-                        this.sliderHostMimic.playSound(this.sliderHostMimic.getShootSound(), 1.0F, 1.0F / (this.sliderHostMimic.getRandom().nextFloat() * 0.2F + 0.9F));
-                        hostEyeProjectile.setPos(this.sliderHostMimic.position().add(0.0F, (this.sliderHostMimic.getBbHeight() / 2.0F) + 0.2F, 0.0F));
-                        this.sliderHostMimic.eyeProjectiles.add(hostEyeProjectile);
+                        this.sliderHostMimic.spawnHostEye();
                         this.attackTime = 30;
                     }
                 }
             }
             --this.attackTime;
+        }
+
+        @Override
+        public boolean requiresUpdateEveryTick() {
+            return true;
         }
     }
 
